update: revision service css. fixed overlap between cards and images

--- a/src/pages/ServicesOffered/Services.css
+++ b/src/pages/ServicesOffered/Services.css
@@ -19,12 +19,14 @@
 
 .cardsRoster {
     width: 100vw;
-    height: 100vh;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    position: relative;
+    padding-bottom: 6em;
+    z-index: 2;
     margin-top: 3%;
     opacity: 0; 
     transform: translateY(-100%); 
@@ -79,7 +81,9 @@
 .imagenGaleriyDesign {
     display: flex;
     margin: 3em;
+    flex-wrap: wrap;
     border-radius: 0.5em;
+    bottom: 0;
     transition: transform 1.5s ease-in-out, opacity 0.5s ease-in-out;
     opacity: 0;
     transform: translateY(-100%); 
